# 073-llm-factor-discovery

./: Cargo.toml  README.md  README.ru.md  README.specify.md  readme.simple.md  readme.simple.ru.md
examples/: backtest_factors.rs  basic_factor_discovery.rs  crypto_factors.rs  live_factor_trading.rs
experiments/: test_ic_calculation.rs  test_parser.rs
src/: lib.rs
src/discovery/: generator.rs  llm_client.rs  mod.rs  prompt_builder.rs  refiner.rs
src/evaluation/: backtester.rs  ic.rs  metrics.rs  mod.rs
src/parser/: expression.rs  lexer.rs  mod.rs  validator.rs
src/strategy/: combiner.rs  execution.rs  mod.rs  signals.rs
src/utils/: config.rs  mod.rs
tests/: integration_tests.rs
